<resources>
    <string name="app_name">BON APETTIT</string>
    <string name="header_title">BON APETTIT</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_intertestial_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="currency">PKR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Vishal+M+Parmar</string>

    <string name="isRTL">false</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="dnt_have_acc">Dont have an account?</string>
    <string name="signup">SignUp</string>
    <string name="cpassword">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_cpassword">Enter Confirm Password</string>
    <string name="pass_nomatch">Password not matched</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="net_not_conn">Internet not connected</string>
    <string name="error_registering">Error while registering</string>
    <string name="register_success">Register Successful</string>
    <string name="email_already_regis">Email already registered</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_in">Login..</string>
    <string name="login_success">Login Successful</string>
    <string name="email_pass_nomatch">Email and Password not matched</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="error_login">Error in Login</string>
    <string name="logout_success">Logout Successful</string>
    <string name="home">Home</string>
    <string name="hotel_list">Hotel List</string>
    <string name="profile">Profile</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="aboutus">About Us</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi,</string>
    <string name="guest">Guest</string>
    <string name="no_data_found">No data found</string>
    <string name="about">About Us</string>
    <string name="loading">Loading..</string>
    <string name="not_log">Not Logged In, Please login</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="no_user_found">No user found</string>
    <string name="updating">Updating..</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="update">Update</string>
    <string name="update_prof_succ">Profile Updated Successful</string>
    <string name="update_prof_not_succ">Error updating profile</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_empty">Email is Empty</string>
    <string name="cannot_use_save">Please allow permission to run app smooth</string>
    <string name="latest">Latest</string>
    <string name="view_all">View All</string>
    <string name="internet_not_conn">Internet is not connected</string>
    <string name="error_server">Error connecting server</string>
    <string name="category">Categories</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="type">Type</string>
    <string name="schedule">Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="your_msg">Your Message</string>
    <string name="submit">Submit</string>
    <string name="select_rating_msg">Please enter rating as well as message</string>
    <string name="price">Price:</string>
    <string name="cart">Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total">Total :-</string>
    <string name="checkout">Checkout</string>
    <string name="comment">Comment</string>
    <string name="total_amount">Total Amount</string>
    <string name="address_empty">Address cannot be empty</string>
    <string name="no_items_cart">No Items in cart</string>
    <string name="error_order">Error placing order, please try again</string>
    <string name="orderlist">Order List</string>
    <string name="pending">Pending</string>
    <string name="quantity">Quantity:</string>
    <string name="qty">Qty:-</string>
    <string name="press_again_exit">Press again to Exit</string>
    <string name="top_rated">Top Rated</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
</resources>
