<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_hotel_list"
            android:icon="@mipmap/list"
            android:title="@string/hotel_list" />

        <item
            android:id="@+id/nav_cat"
            android:icon="@mipmap/cat"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_orderlistr"
            android:icon="@drawable/orderlist"
            android:title="@string/orderlist" />

        <!--<item-->
            <!--android:id="@+id/nav_fav"-->
            <!--android:icon="@drawable/fav_hover"-->
            <!--android:title="@string/favourite" />-->

        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile"
            android:title="@string/profile" />

    </group>


    <item
        android:id="@+id/nav_rate"
        android:icon="@mipmap/rate"
        android:title="@string/rateapp" />

    <item
        android:id="@+id/nav_shareapp"
        android:icon="@mipmap/share"
        android:title="@string/shareapp" />



    <item
        android:id="@+id/nav_about"
        android:icon="@mipmap/about"
        android:title="@string/aboutus" />

    <item
        android:id="@+id/nav_priacy"
        android:icon="@mipmap/privacy"
        android:title="@string/privacypolicy" />

    <item
        android:id="@+id/nav_login"
        android:icon="@mipmap/logout"
        android:title="@string/login" />

    <item
        android:id="@+id/nav_empty"
        tools:ignore="MenuTitle" />

</menu>