<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@color/bg_review_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:padding="12dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RatingBar
            android:id="@+id/rating_addreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:layout_gravity="center_horizontal"
            android:theme="@style/RatingBar_normal"
            style="@style/RatingBar_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_msg"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_add_review_msg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:padding="10dp"
            android:background="@drawable/bg_round_white"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_submit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/white"/>

</LinearLayout>