<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    tools:context="com.apps.fooddelivery.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:text="BON APPETIT"
                android:layout_width="250dp"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/email"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/whiteAA"/>

                    <EditText
                        android:id="@+id/et_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/password"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/whiteAA"/>

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@drawable/bg_text_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_btn_login"/>

            <Button
                android:id="@+id/button_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@drawable/bg_text_color_skip"
                android:text="@string/skip"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_skip"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/whiteAA"
                    android:text="@string/dnt_have_acc"/>

                <TextView
                    android:id="@+id/tv_login_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/signup"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
