<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cart"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <View
            android:id="@+id/view_cart"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white50"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_empty_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/no_data_found"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white50">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/total"/>

                <TextView
                    android:id="@+id/tv_cart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black30"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_confirm_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>