<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white50"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menu_list_10">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white50"/>

                <TextView
                    android:id="@+id/tv_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white50"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menu_list_30">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white50"/>

                <TextView
                    android:id="@+id/tv_info_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white50"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menu_list_10">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white50"/>

                <TextView
                    android:id="@+id/tv_info_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white50"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/menu_list_30">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white50"/>

                <TextView
                    android:id="@+id/tv_info_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white50"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>